[project]
name = "bit-yanhe-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "Flask",
    "pycryptodome>=3.23.0",
    "requests",
    "windows-curses; platform_system == 'Windows'",
]

[project.optional-dependencies]
whisper = [
    "mlx-audio>=0.0.1",
    "zhconv>=1.4.3",
]

[dependency-groups]
dev = [
    "patchright",
]
